<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <import type="android.databinding.ObservableMap" />

        <variable
            name="paramMap"
            type="ObservableMap&lt;String,Integer&gt;" />

        <variable
            name="onParamsChange"
            type="android.databinding.adapters.SeekBarBindingAdapter.OnProgressChanged" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="6dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/beauty_face"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium.Inverse" />

            <LinearLayout
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="24dp"
                android:paddingStart="24dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_cancel_small" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dismiss"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingEnd="24dp"
                android:paddingStart="24dp">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@mipmap/ic_confirm_small" />

            </LinearLayout>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#5C6066" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="33dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beauty_param_skin"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/beauty_seek_smooth"
                style="@style/Widget.AppCompat.SeekBar.Dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="27dp"
                android:layout_marginStart="27dp"
                android:layout_weight="1"
                android:onProgressChanged="@{onParamsChange}"
                android:progress="@{paramMap[`smooth`]}"
                android:splitTrack="false" />

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/percentFormat(paramMap[`smooth`])}"
                tools:text="0%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beauty_param_white"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/beauty_seek_bright"
                style="@style/Widget.AppCompat.SeekBar.Dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="27dp"
                android:layout_marginStart="27dp"
                android:layout_weight="1"
                android:onProgressChanged="@{onParamsChange}"
                android:progress="@{paramMap[`bright`]}"
                android:splitTrack="false" />

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/percentFormat(paramMap[`bright`])}"
                tools:text="0%" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:paddingEnd="24dp"
            android:paddingStart="24dp">

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beauty_param_pink"
                android:textColor="@android:color/white" />

            <SeekBar
                android:id="@+id/beauty_seek_pink"
                style="@style/Widget.AppCompat.SeekBar.Dialog"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="27dp"
                android:layout_marginStart="27dp"
                android:layout_weight="1"
                android:onProgressChanged="@{onParamsChange}"
                android:progress="@{paramMap[`pink`]}"
                android:splitTrack="false" />

            <TextView
                style="@style/SettingTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{@string/percentFormat(paramMap[`pink`])}"
                tools:text="0%" />

        </LinearLayout>
    </LinearLayout>

</layout>